--- a/contacts_folder/contact.html
+++ b/contacts_folder/contact.html
@@ -112,7 +112,7 @@
             </tbody>
           </table>
           <div class="back_btn">
-              <button type="button" class="btn btn-dark "><a class="go_back" href="index.html" >Go to previous page</a></button>
+              <button type="button" class="btn btn-dark "><a class="go_back" href="..index.html" >Go to previous page</a></button>
           </div>
           
         </div>
