--- a/contacts_folder/contact.html
+++ b/contacts_folder/contact.html
@@ -23,7 +23,7 @@
             <h2 class="text-center gradient-border" id="box">You'll get Eveyone's contact list here</h2>
         </div>
         <div class="table-responsive-md">
-          <table class="table table-hover table-bordered "  >
+          <table class="table table-hover table-bordered"  >
             <thead class="main_thread bold_thread">
               <tr>
                 <th scope="col" class="text-center table-primary">#</th>
@@ -112,7 +112,7 @@
             </tbody>
           </table>
           <div class="back_btn">
-              <button type="button" class="btn btn-dark "><a class="go_back" href="..index.html" >Go to previous page</a></button>
+              <button type="button" class="btn btn-dark "><a class="go_back" href="index.html" >Go to previous page</a></button>
           </div>
           
         </div>
